[tool.poetry]
name = "component-hub"
version = "0.1.0"
description = ""
authors = ["VSHN AG <info@vshn.ch>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.9, <3.14"
cookiecutter = "2.6.0"
PyYAML = "6.0.2"
PyGithub = "2.4.0"
click = "8.1.7"
importlib-metadata = "8.5.0"
python-dotenv = "1.0.1"
Jinja2 = "3.1.4"
alt-profanity-check = "1.5.2"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"
mypy = "1.13.0"
types-PyYAML = "6.0.12.20240917"
autopep8 = "2.3.1"
pylint = "3.3.1"
flake8 = "7.1.1"
black = "24.10.0"
bandit = "1.7.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
component-hub = 'component_hub.cli:main'

[tool.black]
line-length = 100

[flake8]
exclude = "*.egg*,.git,.tox,venv"
max-line-length = 120

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.MASTER]
output-format = "colorized"
reports = "no"
disable = "invalid-name, missing-function-docstring,missing-class-docstring,missing-module-docstring,fixme"
min-public-methods = 1

[tool.bandit]
exclude = ".cache,.git,.tox,build,dist,docs,tests"
targets = "."
