[tool.poetry]
name = "component-hub"
version = "0.1.0"
description = ""
authors = ["VSHN AG <info@vshn.ch>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
cookiecutter = "2.6.0"
PyYAML = "6.0.3"
PyGithub = "2.8.1"
click = "8.3.1"
python-dotenv = "1.2.1"
Jinja2 = "3.1.6"
alt-profanity-check = "1.8.0"

[tool.poetry.dev-dependencies]
pytest = "9.0.2"
mypy = "1.19.1"
types-PyYAML = "6.0.12.20250915"
autopep8 = "2.3.2"
pylint = "4.0.4"
flake8 = "7.3.0"
black = "26.1.0"
bandit = "1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
component-hub = 'component_hub.cli:main'

[tool.black]
line-length = 100

[flake8]
exclude = "*.egg*,.git,.tox,venv"
max-line-length = 120

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.MASTER]
output-format = "colorized"
reports = "no"
disable = "invalid-name, missing-function-docstring,missing-class-docstring,missing-module-docstring,fixme"
min-public-methods = 1

[tool.bandit]
exclude = ".cache,.git,.tox,build,dist,docs,tests"
targets = "."
